--- a/app.css
+++ b/app.css
@@ -18,6 +18,7 @@ body {
 
 .content {
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 #mainNavbar {
@@ -43,6 +44,11 @@ body {
     font-size: 4rem;
 }
 
+.navbar.scrolled {
+    background: #DEC0DE;
+    transition: background: 500ms;
+
+}
 
 @media (max-width: 1200px) {
     #headingGroup h1 {
